--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "clone-deep",
-  "description": "Recursively (deep) clone JavaScript native types, like Object, Array, RegExp, Date as well as primitives.",
+  "name": "@emahuni/clone-deep",
+  "description": "Like the original clone-deep, it will recursively (deep) clone JavaScript native types, like Object, Array, RegExp, Date as well as primitives. This supports circular objects cloning.",
   "version": "4.0.1",
-  "homepage": "https://github.com/jonschlinkert/clone-deep",
-  "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
-  "repository": "jonschlinkert/clone-deep",
+  "homepage": "https://github.com/emahuni/clone-deep",
+  "author": "Emmanuel Mahuni (https://github.com/emahuni)",
+  "repository": "emahuni/clone-deep",
   "bugs": {
-    "url": "https://github.com/jonschlinkert/clone-deep/issues"
+    "url": "https://github.com/emahuni/clone-deep/issues"
   },
   "license": "MIT",
   "files": [
