--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@emahuni/clone-deep",
-  "description": "Like the original clone-deep, it will recursively (deep) clone JavaScript native types, like Object, Array, RegExp, Date as well as primitives. This supports circular objects cloning.",
+  "description": "Like the original clone-deep, it will recursively (deep) clone JavaScript native types, like Object, Array, RegExp, Date as well as primitives, setters, getters and circular objects cloning. Clones object property descriptors info as well.",
   "version": "5.1.2",
   "homepage": "https://github.com/emahuni/clone-deep",
   "author": "Emmanuel Mahuni (https://github.com/emahuni)",
